<resources>
    <string name="user_agent">Android Phone/1.0</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_zone">Zone</string>
    <string name="title_activity_news_detail">新闻详情</string>
    <string name="title_activity_login">用户登录</string>
    <string name="empty">Empty</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_my_account">MyAccountActivity</string>
    <string name="title_activity_lottery">LotteryActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_new_lottery">NewLotteryActivity</string>
    <string name="title_activity_lottery_settle">投注结算</string>
    <string name="title_activity_test_drag">TestDragActivity</string>
    <string name="title_activity_lottery_result">LotteryResultActivity</string>
    <string name="title_activity_proxy_list">代理中心</string>
    <string name="name">会员名</string>
    <string name="amount">馀额 (元)</string>
    <string name="profit">盈亏</string>
    <string name="change">流水</string>
    <string name="search_hint">快速搜索会员名称...</string>
    <string name="add_friend">添加会员</string>
    <string name="offline_transfer">下线转账</string>
    <string name="proxy_link">代理连接</string>
    <string name="title_activity_add_friend">添加会员</string>
    <string name="confirm_add">确认添加</string>
    <string name="confirm_pw_fail"> 两次密码输入不一致</string>
    <string name="confirm_pw_stupid">系统侦测到您目前的密码太过简单，有安全疑虑为了保护您帐号的安全，建议您立刻进行密码变更</string>
    <string name="confirm_money_pw_stupid">系统侦测到您目前的资金密码太过简单，有安全疑虑为了保护您帐号的安全，建议您立刻进行密码变更</string>
    <string name="new_account">新会员账号</string>
    <string name="select_return">选择返点</string>
    <string name="password">密码</string>
    <string name="confirm_password">密码确认</string>
    <string name="no_this_userName">查无此帐号</string>
    <string name="return_remark">返点还可在代理中心列表->会员姓名->详细 中修改</string>
    <string name="offline_transfer_without_captcha_hint">未来30分钟内，免简讯验证</string>
    <string name="offline_transfer_send_captcha_countdown">发送验证码至手机 (%1$d)</string>
    <string name="offline_transfer_send_captcha_hint">发送验证码至手机</string>
    <string name="offline_transfer_customer_service_hint">收不到验证码？</string>
    <string name="offline_transfer_customer_service">请连系客服</string>
    <string name="offline_transfer_phone_hint">请确保手机畅通，简讯接收验证码，于下方输入验证码</string>
    <string name="offline_transfer_success">转帐成功!</string>
    <string name="offline_transfer_phone_check_fail">未绑定手机号，无法下线转账</string>
    <string name="offline_transfer_amount_limit">限额10~99999元</string>
    <string name="offline_transfer_hint">*為了提升资金安全，請花几分钟进行手机绑定</string>
    <string name="record_list_title">记录列表</string>
    <string name="record_detail_title">记录详情</string>
    <string name="record_detail_withdraw_bill">撤单</string>
    <string name="record_detail_return">返回</string>
    <string name="money_balance">账户余额(元)</string>
    <string name="money_profitloss">盈亏(元)</string>
    <string name="money_plus">+&#160;</string>
    <string name="money_minus">-&#160;</string>
    <string name="money_classify">分类明细</string>
    <string name="money_bonus">奖金派送</string>
    <string name="money_bet">投注支出</string>
    <string name="money_recharge">充值&#038;转入</string>
    <string name="money_withdraw">提现&#038;转出</string>
    <string name="money_button_recharge">充值</string>
    <string name="money_button_withdraw">提现</string>
    <string name="title_setting">设置</string>
    <string name="title_account_security">账号安全</string>
    <string name="title_system">系统</string>
    <string name="title_modify">修改</string>
    <string name="title_login_pw">登录密码</string>
    <string name="title_fund_pw">资金密码</string>
    <string name="title_pw_email">保密设定</string>
    <string name="title_my_nuckname">我的昵称</string>
    <string name="title_bankcard_management">银行卡管理</string>
    <string name="title_sys_notice">系统通知推送</string>
    <string name="title_sys_update">系统更新</string>
    <string name="title_current_ver">当前版本</string>
    <string name="title_logout">登出</string>
    <string name="title_change_ac_pw">修改登录密码</string>
    <string name="title_change_fund_pw">修改资金密码</string>
    <string name="title_check_email">查看密保邮箱</string>
    <string name="title_success_change">密码修改成功</string>
    <string name="cur_pw">当前密码</string>
    <string name="new_pw">新密码</string>
    <string name="re_new_pw">新密码确认</string>
    <string name="remark1">建议使用字母加数字的组合以提高账户安全性</string>
    <string name="remark2">该密码对资金安全非常重要，请务必牢记并妥善保管</string>
    <string name="remark3">仅供找回密码使用，验证后不能修补，请慎重选择</string>
    <string name="remark4">密保邮件不可修改，用于你的密码找回</string>
    <string name="success_change">你的密码已成功修改</string>
    <string name="back_setting">返回设置</string>
    <string name="confirm_change">确认修改</string>
    <string name="confirm_send">确认</string>
    <string name="updated_version">当前已是最新版本</string>
    <string name="withdraw_selection_notice">选择要提款的银行卡</string>
    <string name="withdraw_title">提款</string>
    <string name="withdraw_notice">长按或点击右上角图标进行删除操作</string>
    <string name="withdraw_add">点击添加银行卡</string>
    <string name="withdraw_notice2">绑定银行卡即可实现快速提现，一键到账</string>
    <string name="withdraw_reminder">您还没有绑定银行卡哦~</string>
    <string name="withdraw_bind_bank">绑定银行卡</string>
    <string name="title_activity_recharge_main">RechargeMainActivity</string>
    <string name="title_activity_recharge_quick">RechargeQuickActivity</string>
    <string name="title_activity_recharge_alipay">RechargeAlipayActivity</string>
    <string name="title_activity_recharge_alipay_remind">RechargeAlipayRemindActivity</string>
    <string name="title_activity_recharge_quick_mind">RechargeQuickMindActivity</string>
    <string-array name="recharge_main_items"></string-array>
    <string name="recharge_line">请选择充值线路</string>
    <string name="recharge_main_choice">  选择充值方式</string>
    <string name="recharge_main_sweet">  溫馨提醒</string>
    <string name="recharge_main_sweet_content">1. 如通过在线充值方式，每天的充值处理时间为：早上00:00至次日23：59。\n2. 填写的金额与充值金额一致，否则无法到账。</string>
    <string name="recharge_quick_login_textview">充值帐号</string>
    <string name="recharge_quick_login_textview_cant_null">* 充值帐号不可为空</string>
    <string name="recharge_quick_login_user">请输入您的充值帐号</string>
    <string name="recharge_quick_choice_line">请选择充值线路</string>
    <string name="recharge_quick_moneysum">充值金额</string>
    <string name="recharge_quick_moneysum_textview_cant_null">* 金额不可为空</string>
    <string name="recharge_quick_please_enter_moneysum">请输入您的充值金额</string>
    <string name="recharge_quick_btn_500">500元</string>
    <string name="recharge_quick_btn_1000">1000元</string>
    <string name="recharge_quick_btn_2000">2000元</string>
    <string name="recharge_quick_btn_5000">5000元</string>
    <string name="recharge_quick_btn_10000">10000元</string>
    <string name="recharge_quick_btn_20000">20000元</string>
    <string name="recharge_quick_btn_30000">30000元</string>
    <string name="recharge_quick_btn_40000">40000元</string>
    <string name="recharge_quick_btn_49999">49999元</string>
    <string name="recharge_quick_btn_rightnow_recharge">马上去充值</string>
    <string name="recharge_quick_remind_textview">充值完成后请耐心等待几分钟\n或者在充值纪录中查看到帐号情況</string>
    <string name="recharge_quick_remind_btn_keep_recharge">继续充值</string>
    <string name="recharge_quick_remind_btn_recharge_record">查看充值纪录</string>
    <string name="recharge_not_get_banklist">还未获取银行列表</string>
    <string name="select_account_bank">选择开户银行</string>
    <string name="bank_account_name">开户人姓名</string>
    <string name="bank_account_number">银行卡号</string>
    <string name="bank_account_number_confirm">银行卡号确认</string>
    <string name="confirm_bind">确认绑定</string>
    <string name="withdraw_amount">提款金額</string>
    <string name="withdraw_card_info">提款银行卡信息</string>
    <string name="withdraw_now">立即提款</string>
    <string name="friendly_reminder">溫馨提示</string>
    <string name="fund_pw_error">资金密码有误，请重新输入</string>
    <string name="withdraw_reminder_1">同一银行一天最多提现120次。</string>
    <string name="withdraw_reminder_2">消费不满充值的30%，有可能被怀疑套现或洗钱，导致账号冻结。</string>
    <string name="success_bind">恭喜您，绑定成功</string>
    <string name="bind_success">绑定成功</string>
    <string name="now_go_withdraw">马上去提款</string>
    <string name="withdraw_success">提款成功</string>
    <string name="success_withdraw">恭喜您，提款成功</string>
    <string name="this_time_withdraw">本次提款 :</string>
    <string name="account_balance">账戶余额 :</string>
    <string name="back_to_lottering">返回</string>
    <string name="card_number">卡号:</string>
    <string name="ac_user_name">戶主:</string>
    <string name="withdraw_money">提款</string>
    <string name="recharge_hint">请依此金额进行充值，小数不可舍去或修改，否则无法到账</string>
    <string name="title_activity_add_success">添加会员成功</string>
    <string name="congrats_add_success">恭喜你, 添加成功!</string>
    <string name="back_to_proxy_list">返回代理中心</string>
    <string name="title_activity_proxy_link">代理连接</string>
    <string name="link_address">链结地址</string>
    <string name="quotas">剩馀配额 : </string>
    <string name="gen_link">生成链结</string>
    <string name="copy_link">复制</string>
    <string name="copied_to_clipboard">已复制链结到剪贴簿</string>
    <string name="title_activity_download_transfer">会员详情</string>
    <string name="monthly_change">本月流水 (元)</string>
    <string name="monthly_profit">本月盈亏 (元)</string>
    <string name="transfer">转账</string>
    <string name="return_bracket">返点 (</string>
    <string name="bracket_adjust">可修改)</string>
    <string name="transfer_function">转账功能</string>
    <string name="activate_transfer">开通</string>
    <string name="title_activity_offline_transfer">下线转账</string>
    <string name="transfer_into">转入会员账号</string>
    <string name="transfer_amount">金额</string>
    <string name="transfer_password">资金密码</string>
    <string name="confirm_transfer">确认转账</string>
    <string name="offlinetransfer_title">离线转账</string>
    <string name="proxylink_title">代理链接</string>
    <string name="memberdetail_title">会员详情</string>
    <string name="title_activity_announcement">AnnouncementActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_bullet_detail">BulletDetailActivity</string>
    <string name="title_activity_lottery_history">LotteryHistoryActivity</string>
    <string name="title_activity_trend_history">TrendHistoryActivity</string>
    <string name="issue_no">期号</string>
    <string name="lottery_num">开奖号</string>
    <string name="issue_profit">本期盈亏(元)</string>
    <string name="pending_lottery">等待开奖...</string>
    <string name="loading_list">正在获取清单</string>
    <string name="no_limit">无限制</string>
    <string name="error_service">发生错误</string>
    <string name="error_update_rebate">更改返点失败:</string>
    <string name="error_add_friend">添加失败:</string>
    <string name="error_activate_transfer">开通失败:</string>
    <string name="name_blank">账号名不能空白</string>
    <string name="remind_text">不知道怎么扫描自己手机上的二维码?</string>
    <string name="open_tuto">查看教程</string>
    <string name="dialog_determine">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_message_check_customer_service">确定要联系客服？</string>
</resources>