<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@mipmap/bg"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:orientation="horizontal"
        android:background="#011A38"
        >
        <TextView
            android:layout_width="76dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/issue_no"
            android:textColor="#5E7C98"
            android:layout_marginLeft="8dp"
            android:textSize="14dp"/>
        <TextView
            android:layout_width="155dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/lottery_num"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="#5E7C98"
            android:textSize="14dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:gravity="center_vertical|right"
            android:text="@string/issue_profit"
            android:textColor="#5E7C98"
            android:layout_marginRight="8dp"
            android:textSize="14dp"/>
    </LinearLayout>


<ListView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/lottery_history_lv"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:requiresFadingEdge="vertical"
    android:fadingEdgeLength="49dp"></ListView>
</LinearLayout>
