<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:showIn="@layout/activity_proxy_list"
    tools:context=".fragment.ProxyListFragment">

    <EditText android:id="@+id/search_proxy_list"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:hint="@string/search_hint"
        android:paddingLeft="10dp"
        android:inputType="textVisiblePassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#42FFFFFF"
        android:textSize="14sp"
        android:background="#0C8F8F"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="8dp"
        >
        <ImageView
            android:layout_width="50dp"
            android:layout_height="38dp"
            android:src="@mipmap/btn_search"
            android:layout_centerInParent="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="搜索"
            android:textSize="12sp"
            android:textColor="#088082"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
             />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_below="@id/search_proxy_list"
        android:id="@+id/proxy_tabs_ll"
        android:background="#F5F5F5">

        <TextView android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_weight="1"
            android:gravity="center"
            android:text="@string/name"
            android:textSize="14sp"
            android:textColor="#CFCFCF"
            android:fontFamily="sans-serif"
            />
        <TextView android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_weight="1"
            android:gravity="center"
            android:text="@string/amount"
            android:textSize="14sp"
            android:textColor="#CFCFCF"
            android:fontFamily="sans-serif"
            />
        <TextView android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_weight="1"
            android:gravity="center"
            android:text="@string/change"
            android:textSize="14sp"
            android:textColor="#CFCFCF"
            android:fontFamily="sans-serif"
            />
        <TextView android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_weight="1"
            android:gravity="center"
            android:text="@string/profit"
            android:textSize="14sp"
            android:textColor="#CFCFCF"
            android:fontFamily="sans-serif"
            />
    </LinearLayout>

    <com.hec.app.util.IndexableListView android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/proxy_tabs_ll"
        android:divider="#E8E8E8"
        android:dividerHeight="1px"
        android:layout_marginBottom="49dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />
    <!--*************************************************-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_alignParentBottom="true">
        <RelativeLayout
            android:id="@+id/proxy_btn_rel_1"
            android:layout_width="0dp"
            android:layout_height="66dp"
            android:layout_weight="132"
            android:layout_gravity="bottom"
            android:clickable="true">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="49dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:background="#F208A09D"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_add_user"/>
            <TextView
                android:layout_width="120dp"
                android:layout_height="49dp"
                android:layout_weight="1"
                android:layout_alignParentBottom="true"
                android:paddingLeft="18sp"
                android:paddingRight="18sp"
                android:text="@string/add_friend"
                android:gravity="center"
                android:layout_gravity="center_vertical"

                android:textSize="14sp"
                android:drawablePadding="5dp"
                android:textColor="#FFFFFF"
                android:fontFamily="sans-serif"/>

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/proxy_btn_2"
            android:layout_width="0dp"
            android:layout_height="66dp"
            android:layout_weight="120"
            android:layout_marginTop="17dp"
            android:background="#F208A09D"
            android:clickable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="32dp"
                android:layout_weight="120"
                android:gravity="center"
                android:paddingBottom="17dp"
                android:text="@string/offline_transfer"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/proxy_btn_3"
            android:layout_width="0dp"
            android:layout_height="66dp"
            android:layout_weight="120"
            android:layout_marginTop="17dp"
            android:background="#F208A09D"
            android:clickable="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingBottom="17dp"
                android:text="@string/proxy_link"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:textSize="14sp"
                android:textColor="#FFFFFF"/>
        </RelativeLayout>
    </LinearLayout>
    <!--*************************************************-->
</RelativeLayout>
