<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.hec.app.activity.RechargeMainActivity"
    tools:showIn="@layout/activity_recharge_main">

    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableLeft="@mipmap/icon_title"
        android:drawablePadding="5dp"
        android:text="@string/recharge_main_choice"
        android:textSize="14dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/recharge_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/recharge_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/recharge_choice"
                android:background="#F6F0D8"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:src="@mipmap/icon_remind" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/remind_text"
                    android:textColor="#b5944e"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/open_tuto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginLeft="8dp"
                    android:clickable="true"
                    android:text="@string/open_tuto"
                    android:textColor="@color/btn_light_green"
                    android:textSize="14sp" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/recharge_relative_layout"
                android:layout_width="fill_parent"
                android:layout_height="120dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/recharge_linear_layout"
                android:background="@color/sweet_remind_bg">

                <ImageView
                    android:id="@+id/sweet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:src="@mipmap/icon_sweet" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_toRightOf="@id/sweet"
                    android:lineSpacingExtra="9dp"
                    android:text="@string/recharge_main_sweet"
                    android:textColor="@color/sweet_remind_word"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_below="@id/textView2"
                    android:foregroundGravity="bottom"
                    android:lineSpacingExtra="7dp"
                    android:lines="3"
                    android:paddingLeft="26dp"
                    android:text="@string/recharge_main_sweet_content"
                    android:textColor="@color/sweet_remind_word" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
