<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="8dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="8dp"
                        android:src="@mipmap/icon_title" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="4dp"
                        android:text="@string/withdraw_selection_notice"
                        android:textColor="#606060"/>
                </LinearLayout>

                <com.hec.app.framework.widget.MyGridView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/gridviewCards"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="24dp"
                    android:columnWidth="175dp"
                    android:horizontalSpacing="1.0px"
                    android:numColumns="auto_fit"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="1.0px"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:text ="@string/withdraw_notice"
                    android:layout_marginLeft="24dp"
                    android:id="@+id/withdraw_notice"
                    android:visibility="invisible"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/withdraw_bottom_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical"
                android:layout_marginBottom="32dp"
                android:layout_centerHorizontal="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/img_bankcard_notice"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="#202020"
                    android:text="@string/withdraw_reminder"
                    android:layout_marginTop="24dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="#9e9e9e"
                    android:layout_marginTop="8dp"
                    android:text="@string/withdraw_notice2"/>


            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>
